tooling/nargo_cli/tests/snapshots/execution_success/fold_2_to_17/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global len: u32 = 4660;

fn main(x: Field) {
    let ped_input: [Field; 4660] = [x; 4660];
    let mut val: Field = poseidon::poseidon2::Poseidon2::hash(ped_input, len);
    let z: Field = foo(x);
    assert(val == z);
}

#[fold]
fn foo(x: Field) -> Field {
    let ped_input: [Field; 4660] = [x; 4660];
    let mut val: Field = poseidon::poseidon2::Poseidon2::hash(ped_input, len);
    val
}
