tooling/nargo_cli/tests/snapshots/execution_success/fold_2_to_17/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QXW4DMQiE11F7HzBgw1uvYhu4/xG6abfqqmqSh+STLPyngZnL9k3Z1+XYvx/nsv1STvV8/8XHUeE5cPun4Y82QWOOXgMJB1SbKsAym6KiqHhVolDWbtM6GDIFphjlIV7Oc7YxlBlSIiGCO/gaZhPcWzf3ZR49vbWlTpm1ZY2Zmk7DY0y9ar39mfMe5ca/8uL8zh73hGwNwphc9zSEeydbODuNcXUnIdK0V/C6CCycJ1EDxiUVhe2Rx3Ln7RM162DiVQIAAA==",
  "debug_symbols": "zZHBCoMwDIbfJecerG5u81WGSNUohVJLbYUhvvtaaTc9jI2xw05p8udLw58ZWqxtX3HZDSMU1xlqzYXgfSWGhhk+SFedFwIxrYxGdCXY6I5STKM0UEgrBIGJCbs2jYrJNRqmnZoQQNm66AZ2XKB/LeRJJ69RmtEA03P2wI+f85dT4NPkGz6leeTTw44vXcYarneOQeIaCVAo/GcT05zVAoOXnZXNxlpzU1GJ5is9NNhajX7oqvk1//Q0GT0EOMvz99b8yI9yuQM=",
  "file_map": {
    "50": {
      "source": "global len: u32 = 2450 * 2 - 240; // for just under 2^17 gates\nfn main(x: Field) {\n    let ped_input = [x; len];\n    let mut val = poseidon::poseidon2::Poseidon2::hash(ped_input, len);\n    let z = foo(x);\n    assert(val == z);\n}\n\n#[fold]\nfn foo(x: Field) -> Field {\n    let ped_input = [x; len];\n    let mut val = poseidon::poseidon2::Poseidon2::hash(ped_input, len);\n    val\n}\n",
      "path": ""
    }
  },
  "names": [
    "main",
    "foo"
  ],
  "brillig_names": []
}
